--- a/BackEnd/TP/TP7/TP7/pom.xml
+++ b/BackEnd/TP/TP7/TP7/pom.xml
@@ -26,6 +26,13 @@
             <version>1.4.200</version>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+            <version>3.9.1</version>
+        </dependency>
     </dependencies>
+
 
 </project>
